--- a/public/css/style.css
+++ b/public/css/style.css
@@ -242,7 +242,8 @@ Parallax
 	background-image: url(../img/parallax/1.jpg);
 }
 #parallax2{
-	background-image: url(../img/parallax/2.jpg);
+	background-image: url(../img/parallax/6.jpg);
+background-size: cover;
 }
 
 
