Se escribieron algunas rutas

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="/css/main.css">
+      {{!-- <link rel="stylesheet" href="/public/css/styles.css"> --}}
   </head>
   <body>
 
@@ -19,7 +20,19 @@
       {{> errors }}
       {{{ body }}}
     </main>
+{{!--
 
+    <nav class="navbar navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="/">
+          <img src="/public/images/imgshare-logo.png" alt="imgShare">
+        </a>
+      </div>
+    </nav>
+
+
+    
+--}}
     <!-- Scritps -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
