--- a/public/views/layouts/main.hbs
+++ b/public/views/layouts/main.hbs
@@ -3,23 +3,25 @@
   <head>
     <meta charset="UTF-8">
     <title>Magento</title>
-    <!-- BOOTSTRAP - BOOTSWATCH THEME - COSMOS -->
-    <link rel="stylesheet" href="https://bootswatch.com/4/cosmo/bootstrap.min.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+          <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- BOOTSTRAP 4-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="/css/main.css">
+    {{!-- <link rel="stylesheet" href="/css/main.css"> --}}
       {{!-- <link rel="stylesheet" href="/public/css/styles.css"> --}}
   </head>
   <body>
 
-    {{> navigation }}
+     {{> navigation }} 
 
-    <main class="container p-5">
-      {{> messages }}
-      {{> errors }}
+    {{!-- <main class="container p-5"> --}}
+      {{!-- {{> messages }}
+      {{> errors }} --}}
       {{{ body }}}
-    </main>
+    {{!-- </main> --}}
 {{!--
 
     <nav class="navbar navbar-dark bg-dark">
