--- a/views/login.ejs
+++ b/views/login.ejs
@@ -121,6 +121,19 @@ margin-left: 4px;
 			<div class="card-body">
 
 
+				<!-- <input type="text" id="correo-login" class="form-control" placeholder="Correo electrónico"><br>
+				<div class="mensaje-login" id="mensaje-correo"></div>
+				<input type="password" id="contrasenia-login" class="form-control" placeholder="Contraseña"><br>
+				<div class="mensaje-login" id="mensaje-contrasenia"></div>
+				<label for="">Recordar sesión</label> <input type="checkbox" class="" name="" id="">
+				<div style="display:none" class="alert alert-danger" id="mensajes-login"></div>
+				<input type="button" style="width: 100%;" onclick="iniciarSesion()" class="btn btn-primary" value="Ingresar">
+				<div class="fb" onclick="loginFacebook()"><i class="fab fa-facebook-f icono-boton-facebook"></i> <span id="texto-facebook">Iniciar sesión con Facebook
+
+				</span><img id="imagen-facebook"  class="imagen-boton-facebook" src="img/iconos/carpeta.png"></img></div> -->
+
+
+
 				<form action="/login" method="POST">
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
