ultimos cambios hasta la fecha

--- a/views/eleccionPagina.ejs
+++ b/views/eleccionPagina.ejs
@@ -157,7 +157,7 @@
 					
 					  </p>
 					  <!-- Button -->
-					  <a href="listaPaginaEstatica.html" class="btn btn-primary btn-block" style="color:white">Button</a>
+					  <a href="/listapaginaestatica" class="btn btn-primary btn-block" style="color:white">Button</a>
 				  
 					</div>
 				  
@@ -185,7 +185,7 @@
 						  previamente definido en orden cronológico
 					  </p>
 					  <!-- Button -->
-					  <a href="listaPaginaPost.html" class="btn btn-primary btn-block" style="color:white">Button</a>
+					  <a href="" class="btn btn-primary btn-block" style="color:white">Button</a>
 				  
 					</div>
 				  
