--- a/views/elegirArchivo.ejs
+++ b/views/elegirArchivo.ejs
@@ -26,6 +26,8 @@
 			background: linear-gradient(to bottom, #191654, #43C6AC);
 		}
 	</style>
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 	<!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
 </head>
 
@@ -160,7 +162,7 @@
 							</article>
 							<div class="card-footer text-muted">
 								<div class="row">
-									<a href="./galeriaImagenes.html" class="btn btn-secondary"
+									<a href="/galeriaimagenes" class="btn btn-secondary"
 										title="Ver todas las imagenes" id="verImagenes"
 										data-placement="bottom"><i class="fas fa-eye fa-lg"></i></a>
 									<a href="#" class="btn btn-default btn-rounded mb-4" data-toggle="modal"
@@ -184,7 +186,7 @@
 							</article>
 							<div class="card-footer text-muted">
 								<div class="row">
-									<a href="./galeriaVideos.html" class="btn btn-secondary" title="Ver todos los videos"
+									<a href="/galeriavideos" class="btn btn-secondary" title="Ver todos los videos"
 										data-toggle="tooltip"
 										data-placement="bottom"><i class="fas fa-eye fa-lg"></i></a>
 									<a href="" class="btn btn-default btn-rounded mb-4" data-toggle="modal"
@@ -209,7 +211,7 @@
 							</article>
 							<div class="card-footer text-muted">
 								<div class="row">
-									<a href="./galeriaArchivos.html" class="btn btn-secondary" title="Ver todos los archivos genericos"
+									<a href="/galeriaarchivos" class="btn btn-secondary" title="Ver todos los archivos genericos"
 										data-toggle="tooltip" data-placement="bottom"><i
 											class="fas fa-eye fa-lg"></i></a>
 									<a href="" class="btn btn-default btn-rounded mb-4" data-toggle="modal"
