--- a/views/galeriaImagenes.ejs
+++ b/views/galeriaImagenes.ejs
@@ -177,15 +177,21 @@
 
     <div class="row text-center text-lg-left ">
       
-   
-        <div class="col-lg-3 col-md-4 col-6"  >
-       
-                <a  href="/perfilImagen"   filter: alpha(opacity=50);" class="d-block mb-4 h-100 image">
-     
-                    <img class="img-fluid img-thumbnail " src="../public/img/parallax/1.jpg">
-                  </a>
-      </div>
+
   
+ 
+
+
+<div class="col-lg-3 col-md-4 col-6"  >
+       
+    <a  href="/perfilImagen"   filter: alpha(opacity=50);" class="d-block mb-4 h-100 image">
+
+        <img class="img-fluid img-thumbnail " src="../public/img/cargaImagenes/b0henSW.jpg">
+      </a>
+</div>
+
+
+
   </div>
 </div>
         
