--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,14 +37,15 @@
       </div>
       <div class="navigation collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
-          <li class="current"><a href="#intro">Home</a></li>
-           <li><a href="#about">About</a></li>
+          <li class="current"><a href="#intro">Inicio</a></li>
+           <li><a href="#about">sobre nosotros</a></li>
          
-          <li><a href="#services">Service</a></li>
+          <li><a href="#services">Servicios</a></li>
           <!--  <li><a href="#portfolio">Works</a></li>-->
           <li><a href="#team">Equipo</a></li>
           <li><a href="#contact">Contactenos</a></li>
           <li><a href="/registro">Registrese</a></li>
+          <li><a href="/login">Login</a></li>
         </ul>
       </div>
     </div>
