--- a/views/listaPaginaEstatica.ejs
+++ b/views/listaPaginaEstatica.ejs
@@ -141,7 +141,7 @@
 			<div class="row" id="formulario">
 				<div class="col-lg-12 col-12">
 		
-					<input id="nombre-pagina" class="form-control" type="text" placeholder="Nombre el nombre de la página aquí">
+					<input id="tituloPaginaEstatica" class="form-control" type="text" placeholder="Nombre el nombre de la página aquí">
 					<div class="valid-feedback">Ok</div>
 					<div class="invalid-feedback">Escriba el nombre, para poder empezar la página</div>
 				</div>
@@ -269,7 +269,7 @@
 	<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
 	<script src="https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js"></script>
 	<script src="https://cdn.datatables.net/select/1.3.0/js/dataTables.select.min.js"></script>
-	<script src="../public/js/controlador-pagina-estatica.js"></script>
+	<script src="../public/js/ctrl-pagina-estatica.js"></script>
 	</body>
 
 </html>
