--- a/views/perfilImagen.ejs
+++ b/views/perfilImagen.ejs
@@ -175,7 +175,7 @@
                                     <div class="card-body">
                                       <p>Descripcion de la imagen</p> 
                                       <div class="text-center">
-                                        <img src="https://source.unsplash.com/G9Rfc1qccH4/400x300" class="img-fluid">
+                                        <img src="../public/img/cargaImagenes/b0henSW.jpg" class="img-fluid">
                                       </div>
                                     </div>
                                     <div class="card-footer d-flex justify-content-between align-items-center"> 
