--- a/views/edicionPagina.ejs
+++ b/views/edicionPagina.ejs
@@ -316,7 +316,7 @@
 					<div class="col-lg-6 caja">
 						<div class="row">
 						  <div class="col-10">
-							  <h3>.CSS</h3>
+							  <h3>CSS</h3>
 						  </div>
 						  <div class="col-2" id="des-css">
 					  
@@ -326,7 +326,7 @@
 					  <div class="col-lg-6 caja">
 						  <div class="row">
 							<div class="col-10">
-								<h3>.JS</h3>
+								<h3>JavaScript</h3>
 							</div>
 							<div class="col-2" id="des-js">
 								
